homeassistant/Ingress-emqx-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: emqx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: emqx
    helm.sh/chart: emqx-5.8.6
  name: emqx-dashboard
  namespace: homeassistant
spec:
  rules:
    - host: dashboard.emqx.local
      http:
        paths:
          - backend:
              service:
                name: emqx
                port:
                  number: 18083
            path: /
            pathType: ImplementationSpecific
